--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto&family=Roboto+Mono&family=Roboto+Slab:wght@300&display=swap');
+
 html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -6,10 +8,31 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: #f5f5f5;
+    color: #f5f5f5;
+    background-color: #303030;
+}
+
+#particles {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
+#particles canvas {
+    display: block;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
 }
 
 nav {
+    display: none;
     background-color: #303030;
     min-height: 5rem;
     height: 5rem;
@@ -35,73 +58,114 @@ nav>ul>li>a {
     text-decoration: none;
 }
 
-main {
-    width: 100vw;
-    min-width: 100vw;
-    max-width: 100vw;
-}
+main {}
 
-.display-1 {
+#name {
     font-weight: 100;
     font-size: 5rem;
     line-height: 0rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    font-family: 'Roboto Slab';
+    font-family: 'Julius Sans One', sans-serif;
 }
 
-#intro {
-    z-index: 7;
-    position: relative;
-    height: 100vh;
-    background-color: #303030;
-    color: #f5f5f5;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+#short-desc {
+    font-size: 1.5rem;
+    font-family: 'Roboto Mono';
 }
 
-#intro #heading {
-    text-align: center;
-    width: 100vw;
-}
-
-#intro #heading .avatar {
+.avatar {
     height: 8rem;
     width: 8rem;
     border-radius: 50%;
-    border: 1px solid #303030;
+    border: 1px solid #f5f5f5;
 }
 
-#intro #heading #name {
-    text-transform: uppercase;
-    font-weight: 100;
+@media(max-width: 520px) {
+    #name {
+        font-size: 14vw;
+        margin-top: 6vw;
+        margin-bottom: 6vw;
+    }
+
+    #short-desc {
+        font-size: 6vw;
+    }
+
+    .avatar {
+        height: 30vw;
+        width: 30vw;
+    }
 }
 
-#intro #heading #short-desc {
-    font-size: 1.5rem;
-    font-family: monospace;
-}
-
-#particles {
+#intro {
     position: absolute;
+    top: 0;
+    display: flex;
+    height: 100vh;
     width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-#particles canvas {
-    display: block;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
-    transition: opacity .8s ease, transform 1.4s ease
+#skills {
+    height: 500px;
+    padding: 2rem;
+    background-color: #f5f5f5;
+    color: #303030;
 }
 
+#links {
+    margin-top: 1rem;
+}
+
+#links > button {
+    background-color: unset!important;
+    box-shadow: unset!important;
+    border: unset!important;
+}
+
+#links > button :hover {
+    border: unset;
+    box-shadow: 0.1rem .01rem 5rem #000;
+}
+
+#links>button>a>img {
+    border-radius: 50%;
+    border: 1px solid #f5f5f5;
+    height: 2rem;
+    width: 2rem;
+    padding: 0.5rem;
+}
+
+#download-resume-button {
+    margin-top: 1rem;
+    border: 1px solid #f5f5f5;
+    border-radius: 0rem;
+    background-color: unset;
+    padding: 0.6rem 0.5rem 0.3rem 0.5rem;
+}
+
+#download-resume-button > a {
+    font-weight: 200;
+    font-family: 'Roboto Mono';
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: #f5f5f5;
+    text-decoration: none;
+}
+
+#download-resume-button > a > div {
+    display: inline-flex;
+}
+
+#download-resume-button > a > div > img {
+    height: 1.5rem;
+    width: 1.5rem;
+    margin-right: 0.5rem;
+}
+/* Width */
 ::-webkit-scrollbar {
     width: 5px;
 }
