--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #particles {
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
@@ -99,17 +99,18 @@ main {}
 }
 
 #intro {
-    position: absolute;
+    position: relative;
     top: 0;
-    display: flex;
     height: 100vh;
     width: 100%;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 #skills {
+    position: ;
     height: 500px;
     padding: 2rem;
     background-color: #f5f5f5;
