--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto&family=Roboto+Mono&family=Roboto+Slab:wght@300&display=swap');
 
+$lightGrey: #e0e0e0;
 $darkGrey: #303030;
 $darkerGrey: #404040;
 $darkerGrey2: #454545;
@@ -20,6 +21,11 @@ $blueDarkest: #002171;
 $yellowLightest: #fffde7;
 $yellowLight: #fff9c4;
 $yellowDarkest: #bc5100;
+
+.card-hover-effect {
+    box-shadow: 1px 1px 4px $lightGrey;
+    transform: scale(1.01);
+}
 
 html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -87,6 +93,18 @@ html {
 
                 text-align: justify;
                 text-justify: inter-word;
+            }
+
+            @media(max-width: 768px) {
+                div {
+                    padding: 1rem;
+                }
+            }
+
+            @media(max-width: 520px) {
+                div {
+                    padding: 0.5rem;
+                }
             }
 
             #intro {
@@ -173,6 +191,7 @@ html {
 
                     a {
                         text-decoration: none;
+
                         div {
                             display: inline-flex;
                             align-items: center;
@@ -195,12 +214,13 @@ html {
 
             #projects {
                 background-color: $greenLightest;
-
+                
                 .section-header {
                     color: $greenDarkest;
                 }
 
                 .card-deck {
+                    padding: 0;
                     display: grid;
                     grid-template-columns: 1fr 1fr;
                     grid-gap: 1rem;
@@ -213,8 +233,7 @@ html {
                         background-color: $greenLight;
 
                         &:hover {
-                            box-shadow: 1px 1px 4px $greenLight;
-                            transform: scale(1.01);
+                            @extend .card-hover-effect;
                         }
 
                         .project-image {
@@ -227,7 +246,15 @@ html {
                             justify-content: flex-start;
                         }
                     }
+
+                    @media (max-width: 768px) {
+                        .card {
+                            grid-template-columns: 1fr;
+                            padding: 1rem;
+                        }
+                    }
                 }
+
                 @media(max-width: 1080px) {
                     .card-deck {
                         grid-template-columns: 1fr;
@@ -248,6 +275,91 @@ html {
 
                 .section-header {
                     color: $blueDarkest;
+                }
+
+                #education {
+                    padding: 0;
+
+                    h2.sub-section-header {
+                        display: block;
+                        text-align: center;
+                        text-decoration: underline;
+                        font-size: 2rem;
+                        font-weight: 500;
+                    }
+
+                    .card {
+                        background-color: $blueLight;
+                        border-radius: 0.5rem;
+                        padding: 2rem;
+
+                        .header {
+                            display: flex;
+                            flex-direction: row;
+                            align-content: center;
+                            flex-wrap: wrap;
+                            padding: 0;
+
+                            img {
+                                height: 2rem;
+                                width: 2rem;
+                                padding-right: 1rem;
+                                align-self: center;
+                            }
+
+                            h3 {
+                                font-size: 1.3rem;
+                                line-height: 0;
+                                font-weight: 500;
+                                overflow-wrap: break-word;
+                            }
+                        }
+
+                        a {
+                            text-decoration: none;
+                            color: $darkGrey;
+
+                            h2#institution {
+                                font-size: 1.7rem;
+                                line-height: 0;
+                                font-weight: 400;
+                            }
+                        }
+
+                        span {
+                            font-size: 1.1rem;
+                            text-align: justify;
+                            text-justify: inter-word;
+                        }
+
+                        .sub-header {
+                            display: flex;
+                            flex-direction: row;
+                            align-content: center;
+                            padding: 1rem 0 0 0;
+
+                            img {
+                                height: 1.3rem;
+                                width: 1.3rem;
+                                padding: 0 0.5rem 0 0rem;
+                                align-self: center;
+                            }
+
+                            span {
+                                font-size: 1rem;
+                            }
+                        }
+
+                        &:hover {
+                            @extend .card-hover-effect;
+                        }
+                    }
+
+                    @media (max-width: 768px) {
+                        .card {
+                            padding: 1rem;
+                        }
+                    }
                 }
             }
 
